v0.5dev
  - fixed cocos sprites too slow with respect pyglet sprites
  - issue 159 fixed scene transitions changing some outgoing scene members    
  - issue 160 fixed ZoomTransition traceback when called repeatedly  
  - issue 158 fixed ctrl + x (toggle show_FPS) not hiding the fps display  

v0.4.0 - September 8, 2010
  - fixed compatibility python 2.4

v0.4.0rc0 - July 7, 2010
  - actions subsystem upgraded: now Actions with duration not know in advance are possible,
    like the ones that terminates on a collision detection condition.
    Also new Move/BoundedMove/WrappedMove actions for kinematic animation controls
  - ScrollableLayer and ScrollingManager moved to cocos.layer from cocos.tiles and
    usable in non-tiled games
  - cocos.tiles.RectMapCollider provides a skeleton for handling collisions
    between sprites and rectangular tile maps
  - recorder: video record your app as a series of .png files, at a desired framerate
  - axis aligned bounding box (AABB) for sprites
  - skeleton animation support, also an editor for the animations
  - optional experimental SDL audio support
  - more minisamples in the test directories
  - we begun to do unit tests for some parts ( actions and tilemap basically)
  - Many bugfixes

v0.3.0 - September 5th, 2008
  - Added particle systems: Sun, Fire, Fireworks, Meteor, Galaxy, Flower, Exposion, Spiral
  - Added lerp actions
  - Applied patch by naveen.michaudagrawal
  - Applied patch by Kao Cardoso Félix
  - Applied patch by JeanpierreDA
  - Fixed Camera "once" locate bug
  - Many bugfixes
  - Primitive vector based line drawing.
  - Tile-map editor

v0.3.0rc0 -  June 27th, 2008
  - Transitions: Added ZoomTransition by Hugo Ruscitti
  - Fixed Tile Map
  - Compatible with pyglet 1.1beta2

v0.3.0beta1 - June 2nd, 2008
  - Actions: added FadeOutBLTiles, FadeOutUpTiles, FadeOutDownTiles effects
  - Actions: added SplitCols, SplitRows effects
  - Actions: renamed FadeOutTiles to FadeOutTRTiles